Added comments on memory requirements for this JUnit test case.
git-svn-id: https://svn.kuali.org/repos/student/poc/brms/brms-ri/branches/brms-ri-dev2@1261 0ac02d80-fb3f-11dc-a574-c57244a850eb